<resources>
    <string name="app_name">疫情图表</string>
    <string name="about">关于</string>
    <string name="tab_china">国内疫情</string>
    <string name="tab_global">国际疫情</string>
    <string name="tab_news">新闻</string>
    <string name="tab_rumors">辟谣</string>
    <string name="hubei">湖北</string>
    <string name="other">其他</string>
    <string name="intro_existing_confirmed">现存确诊\n%1$s</string>
    <string name="intro_no_symptom">无症状\n%1$s</string>
    <string name="intro_input">境外输入\n%1$s</string>
    <string name="intro_total_confirmed">累计确诊\n%1$s</string>
    <string name="intro_total_dead">累计死亡\n%1$s</string>
    <string name="intro_total_cured">累计治愈\n%1$s</string>
    <string name="intro_date">截至%1$s</string>
    <string name="self_introduction">"分布概况\nproducted by MoXtar"</string>
    <string name="format">人</string>
    <string name="confirmed">确诊</string>
    <string name="dead">死亡</string>
    <string name="cured">治愈</string>
    <string name="suspected">疑似</string>
    <string name="date">截至</string>
    <string name="existing_confirmed">现存确诊</string>
    <string name="no_symptom">无症状</string>
    <string name="input">境外输入</string>
    <string name="total_confirmed">累计确诊</string>
    <string name="total_dead">累计死亡</string>
    <string name="total_cured">累计治愈</string>
    <string name="total_existing">累计/现存</string>
    <string name="msg_success_refresh">刷新成功</string>
    <string name="msg_success_load">加载成功</string>
    <string name="msg_err_request">请求失败，请下拉刷新</string>
    <string name="msg_err_json">数据缺损，请下拉刷新</string>
    <string name="about_content">
        \n作者：MoXtar
        \n邮箱：moxtar-1s@outlook.com
        \n仓库：https://github.com/MoXtar-1s/DiseaseCharts/
        \n\n数据来源
        \n国内、国际疫情：网易新闻APP
        \nAPI：https://c.m.163.com/ug/api/wuhan/app/data/list-total
        \n网易新闻：https://wp.m.163.com/163/page/news/virus_report/index.html
        \n\n新闻、辟谣：2019新型冠状病毒疫情实时爬虫及API
        \n作者：https://github.com/BlankerL
        \nGitHub：https://github.com/BlankerL/DXY-COVID-19-Crawler
        \nAPI：https://lab.isaaclin.cn/nCoV/
        \n\n数据说明\n1. 现存确诊=累计确诊-累计治愈-累计死亡。
        \n2. “+”号开头的数据为较昨日的增长量。
        \n3. 国内的增长量较为准确，而全球的只有部分国家能够提供，没有提供的数据按0计算。
        \n4. 增长量累算到最后为“+0”时，有可能是数据没有更新或数据有缺损，显示“—”。
        \n5. 每日中午12点左右为数据更新高峰，下午的数据往往更为准确。
        \n6. 国内/国际分布概况图的“其他”部分为低于对应总数1.5%（考虑视觉效果）的数据的总和。
        \n7. 国际详情柱状图的“其他”部分为低于对应总数0.5%（考虑精确度）的数据的总和。
        \n\n注意！仅供学术交流使用，严禁用作商业用途。
        \n数据来源皆为第三方，如果产生商业纠纷，本人概不负责。
        \n\n使用OKHttp3以及MPAndroidChart制作
        \n2020年5月28日
    </string>
</resources>
